welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:3: error: not found: value dev
dev petitCarre() {
^PictureMono2:16: error: not found: value dev
dev avance5() {
^PictureMono2:19: error: not found: value dev
dev changeColonne() {
^PictureMono2:24: error: not found: value petitCarre
		petitCarre(); avance5();
                ^PictureMono2:24: error: not found: value avance5
		petitCarre(); avance5();
                              ^PictureMono2:26: error: not found: value changeColonne
changeColonne();}
^