welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {dev petitCarre() {
	
def faireV() {
	baisseBrosse(); leveBrosse(); avance(); gauche(); avance();
	baisseBrosse(); leveBrosse(); recule(); droite(); avance();
	baisseBrosse(); leveBrosse(); avance(); gauche(); avance();
}
avance();
for (i<- 0 to 3) {
	faireV();
}
recule();
}
dev avance5() {
	avance(); avance(); avance(); avance(); avance();
}
dev changeColonne() {
	gauche(); avance5(); droite();
}
for(i<- 0 to 2) {
	for (j<- 0 to 2) {
		petitCarre(); avance5();
	}
changeColonne();}
}
